--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     </section>
     <footer>
         <p>© 2023 - 2024</p>
+        <p><a id="sphynx" href="https://github.com/Sphynx6">Sphynx</a></p>
     </footer>
 
     <script src="script.js"></script>
